--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CSE_3311_Freshman_App">
         <activity
+            android:name=".PostActivity"
+            android:exported="false"
+            android:label="@string/title_activity_post"
+            android:theme="@style/Theme.CSE_3311_Freshman_App.NoActionBar" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
