--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cse_3311_freshman_app">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CSE_3311_Freshman_App">
+        <activity
+            android:name=".CreateEventActivity"
+            android:exported="false"
+            android:label="@string/title_activity_create_event"
+            android:theme="@style/Theme.CSE_3311_Freshman_App.NoActionBar" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="false"
